@@ -2,7 +2,7 @@
 # Kernel/System/Ticket.pm - the global ticket handle
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Ticket.pm,v 1.275.2.14 2008-03-21 00:53:17 martin Exp $
+# $Id: Ticket.pm,v 1.275.2.15 2008-03-21 13:49:12 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -36,7 +36,7 @@ use Kernel::System::LinkObject;
 use Kernel::System::Valid;
 
 use vars qw(@ISA $VERSION);
-$VERSION = '$Revision: 1.275.2.14 $';
+$VERSION = '$Revision: 1.275.2.15 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 =head1 NAME
@@ -1342,7 +1342,7 @@ sub MoveTicket {
             CreateUserID => $Param{UserID},
         );
         # send move notify to queue subscriber
-        if (!$Param{SendNoNotification} & $Ticket{StateType} ne 'closed') {
+        if (!$Param{SendNoNotification} && $Ticket{StateType} ne 'closed') {
             my %Used = ();
             my @UserIDs = $Self->GetSubscribedUserIDsByQueueID(QueueID => $Param{QueueID});
             if ($Param{ForceNotificationToUserID}) {
@@ -6239,6 +6239,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 
 =head1 VERSION
 
-$Revision: 1.275.2.14 $ $Date: 2008-03-21 00:53:17 $
+$Revision: 1.275.2.15 $ $Date: 2008-03-21 13:49:12 $
 
 =cut
