@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.102 2008-03-20 22:52:33 martin Exp $
+# $Id: CHANGES,v 1.465.2.103 2008-03-21 13:49:12 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.2.6 (2008/??/??)
+ - (2008/03/21) Fixed bug# 2781 - Typo in Kernel::System::Ticket::MoveTicket()
+   "&" instead of "&&".
  - (2008/03/20) Fixed bug# 2772 - Dangling links to deleted tickets (ticket
     links get not deleted after a ticket got deleted).
  - (2008/03/14) Fixed bug# 2770 - Internal cache mechanism of SLAs delivers
